--- a/style.css
+++ b/style.css
@@ -291,3 +291,41 @@ h3{
         margin-right: 15px;
     }
 }
+
+/* CALL TO ACTION */
+
+.ctn{
+    margin: 100px auto;
+    width: 80%;
+    background-image:linear-gradient(rgb(0,0,0,0.7),rgb(0,0,0,0.7)),url(./eduford_img/banner2.jpg);
+    text-align: center;
+    border-radius: 10px;
+    padding: 100px 0;
+    color: #fff;
+}
+.ctn h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+}
+@media (max-width:700px) {
+    .ctn h1{
+        font-size: 24px;
+    }
+    
+}
+
+.footer h1{
+    margin-bottom:20px;
+}
+.footer p{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.icons i{
+    margin-left: 30px;
+    color: #f44336;
+}
+.footer p i{
+    color: #f44336;
+}
